--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div id='root'></div>
 
     <script src='/static/bundle.js'></script>
+    <!--<script src='dist/app.js'></script>-->
   </body>
 </html>
