--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
       crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel='stylesheet' href='/styles.css'>
+    <!--<link rel="stylesheet" href="./dist/styles.css">-->
   </head>
   <body>
     <div id='root'></div>
 
-    <script src='/static/bundle.js'></script>
+    <script src='static/bundle.js'></script>
     <!--<script src='dist/app.js'></script>-->
   </body>
 </html>
